# internal/controller/user.go
@@ -20,17 +20,17 @@ func NewUserController(repo domain.UserRepository) *UserController {
 	}
 }
 
-// GetAllUsers godoc
-// @Summary List all users
-// @Description List all users
-// @Tags Users
-// @Accept json
-// @Produce json
-// @Success 200 {array} domain.User
-// @Failure 400 {object} httpserver.Error
-// @Failure 404 {object} httpserver.Error
-// @Failure 500 {object} httpserver.Error
-// @Router /users [get]
+// swagger:route GET /users Users getAllUsers
+//
+// List all users
+//
+// List all users
+//
+// responses:
+//   200: []User
+//   400: Error
+//   404: Error
+//   500: Error
 func (ctrl UserController) GetAllUsers(w http.ResponseWriter, _ *http.Request) {
 	u, err := ctrl.repo.FindAll()
 	if err != nil {
@@ -40,18 +40,17 @@ func (ctrl UserController) GetAllUsers(w http.ResponseWriter, _ *http.Request) {
 	httpserver.RespondWithJSON(w, http.StatusOK, u)
 }
 
-// GetUser godoc
-// @Summary Get a user
-// @Description Get a user by ID
-// @Tags Users
-// @Accept json
-// @Produce json
-// @Param user_id path string true "User ID"
-// @Success 200 {object} domain.User
-// @Failure 400 {object} httpserver.Error
-// @Failure 404 {object} httpserver.Error
-// @Failure 500 {object} httpserver.Error
-// @Router /users/{user_id} [get]
+// swagger:route GET /users/{user_id} Users getUser
+//
+// Get a user
+//
+// Get a user by ID
+//
+// responses:
+//   200: User
+//   400: Error
+//   404: Error
+//   500: Error
 func (ctrl UserController) GetUser(w http.ResponseWriter, _ *http.Request) {
 	ID, _ := uuid.Parse("91cf6ac3-ec86-4e6f-8b60-7f3cff879ec5")
 
