# internal/domain/new_tree_param.go
@@ -1,0 +1,8 @@
+package domain
+
+// swagger:parameters newTree
+type NewTreeParam struct {
+	// required: true
+	// in: body
+	Tree Tree `json:"tree"`
+}
