# models/domain_user.go
@@ -1,0 +1,71 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// DomainUser domain user
+//
+// swagger:model domain.User
+type DomainUser struct {
+
+	// created at
+	CreatedAt string `json:"created_at,omitempty"`
+
+	// email
+	Email string `json:"email,omitempty"`
+
+	// id
+	ID string `json:"id,omitempty"`
+
+	// lang
+	Lang string `json:"lang,omitempty"`
+
+	// login
+	Login string `json:"login,omitempty"`
+
+	// name
+	Name string `json:"name,omitempty"`
+
+	// password hash
+	PasswordHash string `json:"password_hash,omitempty"`
+
+	// role
+	Role string `json:"role,omitempty"`
+}
+
+// Validate validates this domain user
+func (m *DomainUser) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// ContextValidate validates this domain user based on context it is used
+func (m *DomainUser) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *DomainUser) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *DomainUser) UnmarshalBinary(b []byte) error {
+	var res DomainUser
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
